Added "creating Modal" for To-Do; Project; Note

--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,14 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960" class="sideBtnIcon">
                         <path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z" />
                     </svg>
+
                     <title class="sideBtnTitle">Add Item</title>
+
+                    <ul class="sideBtnAddList">
+                        <li class="sideBtnAddItem" value="toDo">To Do task</li>
+                        <li class="sideBtnAddItem" value="project">Project</li>
+                        <li class="sideBtnAddItem" value="note">Note</li>
+                    </ul>
                 </div>
             </aside>
 
@@ -133,7 +140,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -209,7 +216,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -283,7 +290,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -357,7 +364,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -431,7 +438,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -505,7 +512,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -579,7 +586,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -653,7 +660,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -727,7 +734,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -801,7 +808,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -875,7 +882,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -949,7 +956,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -1023,7 +1030,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -1097,7 +1104,7 @@
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 -960 960 960"
-                                    class="tCardCheckBoxCheck active"
+                                    class="tCardCheckBoxCheck show"
                                 >
                                     <path
                                         d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
@@ -1156,7 +1163,7 @@
                 </div>
 
                 <!-- NOTES SECTION  -->
-                <div class="notesWrapper active">
+                <div class="notesWrapper show">
                     <div class="noteCard">
                         <div class="noteCardHeaderWrapper">
                             <h2 contenteditable="true" class="noteHeading">
@@ -1210,7 +1217,73 @@
         </div>
 
         <div class="modalWrapper">
-            <div class="modal"></div>
+            <div class="modal">
+                <form action="" data-action="add" class="addItemModal show">
+                    <!-- <div class="addModalHeader">
+                    </div> -->
+                    <h2 class="addModalHeading">
+                        <span class="addModalHeadingAction"> Create a new </span>
+                        <span class="addModalHeadingType">PROJECT</span>
+                    </h2>
+
+                    <div class="addModalBody">
+                        <div class="addModalBodyTop">
+                            <label for="addModalTitleInp" class="addModalTitleLabel">
+                                Title <span aria-label="require">*</span>
+                            </label>
+                            <input
+                                type="text"
+                                name="addModalTitleInp"
+                                id="addModalTitleInp"
+                                class="addModalTitleInp"
+                                placeholder="Sample heading text"
+                            />
+
+                            <label for="addModalDetailInp" class="addModalDetailLabel show"> Detail </label>
+                            <textarea
+                                name="addModalDetailInp"
+                                id="addModalDetailInp"
+                                class="addModalDetailInp show"
+                                placeholder="Sample detail text"
+                            ></textarea>
+                        </div>
+
+                        <div class="addModalBodyBottom show">
+                            <label for="addModalDateInp" class="addModalDateLabel">Due date</label>
+                            <input
+                                type="date"
+                                name="addModalDateInp"
+                                id="addModalDateInp"
+                                class="addModalDateInp"
+                                min="2025-01-01"
+                                max="2099-12-31"
+                            />
+                            <label for="" class="addModalPriorityLabel">Priority</label>
+                            <div class="addModalPriorityWrapper">
+                                <button class="addModalPriorityBtn" value="low">Low</button>
+                                <button class="addModalPriorityBtn" value="medium">Medium</button>
+                                <button class="addModalPriorityBtn" value="high">High</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="addModalFooter">
+                        <button class="addModalBtn">
+                            <span class="addModalBtnAction">Add</span>
+                            <span class="addModalBtnType">Project</span>
+                        </button>
+                    </div>
+                </form>
+
+                <div class="addModalCloseWrapper">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="addModalCloseIcon">
+                        <title>Close</title>
+                        <path
+                            d="M20 6.91L17.09 4L12 9.09L6.91 4L4 6.91L9.09 12L4 17.09L6.91 20L12 14.91L17.09 20L20 17.09L14.91 12L20 6.91Z"
+                        />
+                    </svg>
+                </div>
+            </div>
         </div>
     </body>
 </html>
