--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                 <ul class="sideList">
                     <li class="sideItem">
                         <div class="sideItemContentWrapper">
-                            <span class="sideItemText"> Home </span>
+                            <span class="sideItemText"> All </span>
                             <span class="sideItemNumber">99+</span>
                         </div>
                     </li>
@@ -71,6 +71,10 @@
                         <!-- PROJECT SIDE BAR SECTION  -->
                         <ul class="sideProjectList">
                             <li class="sideProjectItem">
+                                <span class="projectItemText">Personal</span>
+                                <span class="projectItemNumber">99+</span>
+                            </li>
+                            <li class="sideProjectItem">
                                 <span class="projectItemText">HTML</span>
                                 <span class="projectItemNumber">99+</span>
                             </li>
@@ -79,7 +83,7 @@
                                 <span class="projectItemNumber">99+</span>
                             </li>
                             <li class="sideProjectItem">
-                                <span class="projectItemText">REACT</span>
+                                <span class="projectItemText">CSS</span>
                                 <span class="projectItemNumber">99+</span>
                             </li>
                             <!-- <li class="sideProjectItem">
@@ -122,7 +126,7 @@
             <!-- MAIN CONTENT SECTION  -->
             <div class="content">
                 <!-- TO DO SECTION  -->
-                <div class="todoWrapper">
+                <div class="todoWrapper show">
                     <div class="todoCard importantMed">
                         <!-- TO DO CARD LEFT SECTION  -->
                         <div class="tCardLeft">
@@ -1160,10 +1164,158 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="todoCard importantMed">
+                        <!-- TO DO CARD LEFT SECTION  -->
+                        <div class="tCardLeft">
+                            <div class="tCardCheckBoxWrapper">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 -960 960 960"
+                                    class="tCardCheckBoxBlank"
+                                >
+                                    <path
+                                        d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Z"
+                                    />
+                                </svg>
+
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 -960 960 960"
+                                    class="tCardCheckBoxCheck show"
+                                >
+                                    <path
+                                        d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
+                                    />
+                                </svg>
+                            </div>
+                            <h4 class="tCardHeading">Some heading</h4>
+                        </div>
+
+                        <!-- TO DO CARD RIGHT SECTION  -->
+                        <div class="tCardRight">
+                            <div class="tCardDetailsWrapper">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="tCardDetailsIcon">
+                                    <title>Task details</title>
+                                    <path
+                                        d="M11 9H13V7H11V9M14 17V15H13V11H10V13H11V15H10V17H14M5 3H19C20.1 3 21 3.89 21 5V19C21 19.53 20.79 20.04 20.41 20.41C20.04 20.79 19.53 21 19 21H5C4.47 21 3.96 20.79 3.59 20.41C3.21 20.04 3 19.53 3 19V5C3 3.89 3.89 3 5 3M19 19V5H5V19H19Z"
+                                    />
+                                </svg>
+                                <span class="tCardDetailsText hidden">Details</span>
+                            </div>
+
+                            <span class="tCardDate"> Nov 11th 25</span>
+
+                            <div class="tCardEditWrapper">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="tCardEditIcon">
+                                    <title>Edit task</title>
+                                    <path
+                                        d="M5,3C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19H5V5H12V3H5M17.78,4C17.61,4 17.43,4.07 17.3,4.2L16.08,5.41L18.58,7.91L19.8,6.7C20.06,6.44 20.06,6 19.8,5.75L18.25,4.2C18.12,4.07 17.95,4 17.78,4M15.37,6.12L8,13.5V16H10.5L17.87,8.62L15.37,6.12Z"
+                                    />
+                                </svg>
+                            </div>
+                            <div class="tCardDeleteWrapper">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24"
+                                    class="tCardDeleteIconBlank"
+                                >
+                                    <title>Delete task</title>
+                                    <path
+                                        d="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
+                                    />
+                                </svg>
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24"
+                                    class="tCardDeleteIconFull hidden"
+                                >
+                                    <title>Delete task</title>
+                                    <path
+                                        d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
+                                    />
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="todoCard importantMed">
+                        <!-- TO DO CARD LEFT SECTION  -->
+                        <div class="tCardLeft">
+                            <div class="tCardCheckBoxWrapper">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 -960 960 960"
+                                    class="tCardCheckBoxBlank"
+                                >
+                                    <path
+                                        d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Z"
+                                    />
+                                </svg>
+
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 -960 960 960"
+                                    class="tCardCheckBoxCheck show"
+                                >
+                                    <path
+                                        d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q8 0 15 1.5t14 4.5l-74 74H200v560h560v-266l80-80v346q0 33-23.5 56.5T760-120H200Zm261-160L235-506l56-56 170 170 367-367 57 55-424 424Z"
+                                    />
+                                </svg>
+                            </div>
+                            <h4 class="tCardHeading">Some heading</h4>
+                        </div>
+
+                        <!-- TO DO CARD RIGHT SECTION  -->
+                        <div class="tCardRight">
+                            <div class="tCardDetailsWrapper">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="tCardDetailsIcon">
+                                    <title>Task details</title>
+                                    <path
+                                        d="M11 9H13V7H11V9M14 17V15H13V11H10V13H11V15H10V17H14M5 3H19C20.1 3 21 3.89 21 5V19C21 19.53 20.79 20.04 20.41 20.41C20.04 20.79 19.53 21 19 21H5C4.47 21 3.96 20.79 3.59 20.41C3.21 20.04 3 19.53 3 19V5C3 3.89 3.89 3 5 3M19 19V5H5V19H19Z"
+                                    />
+                                </svg>
+                                <span class="tCardDetailsText hidden">Details</span>
+                            </div>
+
+                            <span class="tCardDate"> Nov 11th 25</span>
+
+                            <div class="tCardEditWrapper">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="tCardEditIcon">
+                                    <title>Edit task</title>
+                                    <path
+                                        d="M5,3C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19H5V5H12V3H5M17.78,4C17.61,4 17.43,4.07 17.3,4.2L16.08,5.41L18.58,7.91L19.8,6.7C20.06,6.44 20.06,6 19.8,5.75L18.25,4.2C18.12,4.07 17.95,4 17.78,4M15.37,6.12L8,13.5V16H10.5L17.87,8.62L15.37,6.12Z"
+                                    />
+                                </svg>
+                            </div>
+                            <div class="tCardDeleteWrapper">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24"
+                                    class="tCardDeleteIconBlank"
+                                >
+                                    <title>Delete task</title>
+                                    <path
+                                        d="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
+                                    />
+                                </svg>
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24"
+                                    class="tCardDeleteIconFull hidden"
+                                >
+                                    <title>Delete task</title>
+                                    <path
+                                        d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
+                                    />
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- NOTES SECTION  -->
-                <div class="notesWrapper show">
+                <div class="notesWrapper">
                     <div class="noteCard">
                         <div class="noteCardHeaderWrapper">
                             <h2 contenteditable="true" class="noteHeading">
@@ -1219,7 +1371,7 @@
         <div class="modalWrapper">
             <div class="modal">
                 <!-- MODAL FORM FOR ADD/EDIT TO-DO; PRJ; NOTE  -->
-                <form action="" data-action="add" class="addEditItemModal">
+                <form action="" data-action="add" class="addEditItemModal show">
                     <h2 class="addEditModalHeading">
                         <span class="addEditModalHeadingAction"> Create a new </span>
                         <span class="addEditModalHeadingType">PROJECT</span>
@@ -1274,17 +1426,12 @@
                     </div>
                 </form>
 
-                <div class="detailModal show">
+                <!-- MODAL DETAIL FOR TO-DO  -->
+                <div class="detailModal">
                     <h2 class="detailModalHeading">Some sample Heading</h2>
                     <div class="detailModalContentWrapper">
                         <h4 class="detailModalContentHeading">Some heading</h4>
-                        <p class="detailModalContent">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
+                        <p class="detailModalContent">Lorem ipsum dolor sit amet,</p>
                         <h4 class="detailModalContentHeading">Some heading</h4>
                         <p class="detailModalContent">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
