Added localStorageVerify to check local save info from user. Added datesHandler to verify and sort to-do by day/week. Added sideBar to handle sideBar list logic. Added screenHandler to manipulate screen. Currently handling sideBar list

--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,9 @@
             <!-- SIDEBAR SECTION  -->
             <aside class="sideBar">
                 <ul class="sideList">
-                    <li class="sideItem">
+                    <!-- <li class="sideItem">
                         <div class="sideItemContentWrapper">
-                            <span class="sideItemText"> All </span>
+                            <span class="sideItemText"> Home </span>
                             <span class="sideItemNumber">99+</span>
                         </div>
                     </li>
@@ -68,7 +68,6 @@
                             <span class="sideItemNumber">99+</span>
                         </div>
 
-                        <!-- PROJECT SIDE BAR SECTION  -->
                         <ul class="sideProjectList">
                             <li class="sideProjectItem">
                                 <span class="projectItemText">Personal</span>
@@ -86,26 +85,14 @@
                                 <span class="projectItemText">CSS</span>
                                 <span class="projectItemNumber">99+</span>
                             </li>
-                            <!-- <li class="sideProjectItem">
-                                <span class="projectItemText">REACT</span>
-                                <span class="projectItemNumber">99+</span>
-                            </li>
-                            <li class="sideProjectItem">
-                                <span class="projectItemText">REACT</span>
-                                <span class="projectItemNumber">99+</span>
-                            </li>
-                            <li class="sideProjectItem">
-                                <span class="projectItemText">REACT</span>
-                                <span class="projectItemNumber">99+</span>
-                            </li> -->
                         </ul>
                     </li>
                     <li class="sideItem">
                         <div class="sideItemContentWrapper">
-                            <span class="sideItemText">Notes</span>
+                            <span class="sideItemText">notes</span>
                             <span class="sideItemNumber">99+</span>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
 
                 <div class="sideBtnWrapper">
@@ -1368,7 +1355,7 @@
             </footer>
         </div>
 
-        <div class="modalWrapper">
+        <div class="modalWrapper ">
             <div class="modal">
                 <!-- MODAL FORM FOR ADD/EDIT TO-DO; PRJ; NOTE  -->
                 <form action="" data-action="add" class="addEditItemModal show">
