Fixed note card height issue. Added getSideBarProjectItemsList function. Added render to do items to screen by 'today', 'week', or by project items. Added render full notes list to screen. Fixed typos.

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
             <!-- MAIN CONTENT SECTION  -->
             <div class="content">
                 <!-- TO DO SECTION  -->
-                <div class="todoWrapper show">
+                <div class="todoWrapper">
                     <!-- <div class="todoCard importantMed">
                         <div class="tCardLeft">
                             <div class="tCardCheckBoxWrapper">
@@ -188,8 +188,8 @@
                 </div>
 
                 <!-- NOTES SECTION  -->
-                <div class="notesWrapper">
-                    <div class="noteCard">
+                <div class="notesWrapper show">
+                    <!-- <div class="noteCard">
                         <div class="noteCardHeaderWrapper">
                             <h2 contenteditable="true" class="noteHeading">
                                 Some really really long long Note heading
@@ -216,7 +216,7 @@
                                 commodo consequat.
                             </p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
