Added get ToDo item by Id. Added functions control modal's form text content when viewing/editing ToDo details. Fixed + improved naming in some functions/elements/attributes.

--- a/src/index.html
+++ b/src/index.html
@@ -289,17 +289,17 @@
                                 id="addEditModalProjectSelect"
                                 class="addEditModalProjectSelect"
                             >
-                                <option selected value="" class="addEditModalProjectOption">Personal</option>
-                                <option value="" class="addEditModalProjectOption">html</option>
-                                <option value="" class="addEditModalProjectOption">javascript</option>
-                                <option value="" class="addEditModalProjectOption">css</option>
+                                <option selected data-value="" class="addEditModalProjectOption">Personal</option>
+                                <option data-value="" class="addEditModalProjectOption">html</option>
+                                <option data-value="" class="addEditModalProjectOption">javascript</option>
+                                <option data-value="" class="addEditModalProjectOption">css</option>
                             </select>
 
                             <label for="" class="addEditModalPriorityLabel">Priority</label>
                             <div class="addEditModalPriorityWrapper">
-                                <button class="addEditModalPriorityBtn" value="low">Low</button>
-                                <button class="addEditModalPriorityBtn" value="medium">Medium</button>
-                                <button class="addEditModalPriorityBtn" value="high">High</button>
+                                <button class="addEditModalPriorityBtn" data-value="low">Low</button>
+                                <button class="addEditModalPriorityBtn" data-value="medium">Medium</button>
+                                <button class="addEditModalPriorityBtn" data-value="high">High</button>
                             </div>
                         </div>
                     </div>
@@ -316,9 +316,9 @@
                 <div class="detailModal">
                     <h2 class="detailModalHeading">Some sample Heading</h2>
                     <div class="detailModalContentWrapper">
-                        <h4 class="detailModalContentHeading">Some heading</h4>
+                        <h4 class="detailModalContentHeading">Title</h4>
                         <p class="detailModalContent">Lorem ipsum dolor sit amet,</p>
-                        <h4 class="detailModalContentHeading">Some heading</h4>
+                        <h4 class="detailModalContentHeading">Details</h4>
                         <p class="detailModalContent">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -326,7 +326,7 @@
                             voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
                             cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </p>
-                        <h4 class="detailModalContentHeading">Some heading</h4>
+                        <h4 class="detailModalContentHeading">Due date</h4>
                         <p class="detailModalContent">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -334,7 +334,7 @@
                             voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
                             cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </p>
-                        <h4 class="detailModalContentHeading">Some heading</h4>
+                        <h4 class="detailModalContentHeading">Priority</h4>
                         <p class="detailModalContent">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
